--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel=stylesheet href=https://axiosnm.github.io/plugins/magnific-popup/magnific-popup.css>
 <link rel=stylesheet href=https://axiosnm.github.io/plugins/slick/slick.css>
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Anaheim%7cQuattrocento+Sans:400,700&display=swap">
-<link rel=stylesheet href=https://axiosnm.github.io/css/style.min.css media=screen>
+<link rel=stylesheet href=https://axiosnm.github.io/css/style.css media=screen>
 <link rel=stylesheet href=https://axiosnm.github.io/css/custom.min.css media=screen>
 <link rel="shortcut icon" href=https://axiosnm.github.io/images/favicon.png type=image/x-icon>
 <link rel=icon href=https://axiosnm.github.io/images/favicon.png type=image/x-icon>
@@ -22,8 +22,8 @@
 <img class=d-none src=https://axiosnm.github.io/images/backgrounds/hero-area.webp onerror="this.onerror=null,this.parentElement.style.backgroundImage='url(https://axiosnm.github.io/images/backgrounds/hero-area.jpg)'">
 <div class=block>
 <h1>Axios Technology</h1>
-<p>Providing Digital Forensics & Cyber Incident Reponse Services</p>
-<a href=#services class="btn btn-transparent page-scroll">Explore</a>
+<p>Digital Forensics Services & Cyber Incident Reponse</p>
+<a href=#about class="btn btn-transparent page-scroll">Explore</a>
 </div>
 </section>
 <section class="sticky-top navigation">
@@ -346,7 +346,7 @@ Us </span></h2>
 <img src=https://axiosnm.github.io/images/logo.png alt="Axios Technology" height=42>
 </a>
 <br>
-<p>Copyright © 2020 Designed by <a href=https://themefisher.com>Themefisher</a> & Developed by <a href=https://gethugothemes.com>Gethugothemes</a></p>
+<p>Copyright © 2022 Designed by <a href=https://themefisher.com>Themefisher</a> & Developed by <a href=https://gethugothemes.com>Gethugothemes</a></p>
 </div>
 </div>
 </div>
