deploy: fb3ed16c4f09390ad31c22018e717ceb9896f957

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
 <meta name=description content="Digital Forensics & Cyber Incident Response">
 <meta name=author content="Themefisher">
-<meta name=generator content="Hugo 0.92.1">
+<meta name=generator content="Hugo 0.92.2">
 <link rel=stylesheet href=https://axiosnm.github.io/plugins/bootstrap/bootstrap.min.css>
 <link rel=stylesheet href=https://axiosnm.github.io/plugins/themify-icons/themify-icons.css>
 <link rel=stylesheet href=https://axiosnm.github.io/plugins/magnific-popup/magnific-popup.css>
@@ -100,8 +100,8 @@ Us </span></h2>
 </div>
 </div>
 </section>
-<section id=cta class="call-to-action section-sm bg-1 overly" style=background-image:url(https://axiosnm.github.io/images/backgrounds/bg-white-wall.webp)>
-<img src=https://axiosnm.github.io/images/backgrounds/bg-white-wall.webp style=display:none onerror="this.onerror=null,this.parentElement.style.backgroundImage='url(https://axiosnm.github.io/images/backgrounds/bg-white-wall.jpg)'">
+<section id=cta class="call-to-action section-sm bg-1 overly" style=background-image:url(https://axiosnm.github.io/images/backgrounds/server-rack.webp)>
+<img src=https://axiosnm.github.io/images/backgrounds/server-rack.webp style=display:none onerror="this.onerror=null,this.parentElement.style.backgroundImage='url(https://axiosnm.github.io/images/backgrounds/server-rack.jpg)'">
 <div class=container>
 <div class=row>
 <div class="col-lg-12 text-center">
@@ -125,10 +125,10 @@ Services </span></h2>
 <article class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-duration=500ms>
 <div class="service-block text-center">
 <div class="service-icon text-center">
-<i class=ti-world></i>
+<i class=ti-harddrives></i>
 </div>
-<h3>WordPress Theme</h3>
-<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus.Nullam iaculis arcu at mauris dapibus consectetur.</p>
+<h3>Forensic Imaging</h3>
+<p>With modern tools and techniques, we can acquire and preserve digital evidence</p>
 </div>
 </article>
 <article class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-duration=500ms>
@@ -136,7 +136,7 @@ Services </span></h2>
 <div class="service-icon text-center">
 <i class=ti-layout></i>
 </div>
-<h3>Responsive Design</h3>
+<h3>Incident Response</h3>
 <p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus.Nullam iaculis arcu at mauris dapibus consectetur.</p>
 </div>
 </article>
@@ -145,8 +145,8 @@ Services </span></h2>
 <div class="service-icon text-center">
 <i class=ti-blackboard></i>
 </div>
-<h3>Media & Advertisement</h3>
-<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus.Nullam iaculis arcu at mauris dapibus consectetur.</p>
+<h3>Data Recovery</h3>
+<p>USB or Hard Drive unreadable? There&rsquo;s a good chance we can recover that data.</p>
 </div>
 </article>
 <article class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-duration=500ms>
@@ -154,7 +154,7 @@ Services </span></h2>
 <div class="service-icon text-center">
 <i class=ti-palette></i>
 </div>
-<h3>Graphic Design</h3>
+<h3>Expert Witness Services</h3>
 <p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus.Nullam iaculis arcu at mauris dapibus consectetur.</p>
 </div>
 </article>
