deploy: cfb9811c5bccbb427b999ad6554453ab4e067ede

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Team </span></h2>
 <div class="col-lg-3 col-md-6 col-12 wow fadeInDown" data-wow-duration=500ms>
 <div class=team-member>
 <div class=member-photo>
-<img class="img-fluid lozad" data-src=https://axiosnm.github.io/images/team/team-1.webp onerror="this.onerror=null,this.src='https://axiosnm.github.io/images/team/team-1.jpg'" alt="Abul Mal Muhit">
+<img class="img-fluid lozad" data-src=https://axiosnm.github.io/images/team/tommy.webp onerror="this.onerror=null,this.src='https://axiosnm.github.io/images/team/tommy.jpg'" alt="Tommy Harris">
 <div class=mask>
 <ul class=list-inline>
 <li class=list-inline-item><a href=#><i class=ti-facebook></i></a></li>
@@ -203,7 +203,7 @@ Team </span></h2>
 </div>
 </div>
 <div class=member-meta>
-<h4>Abul Mal Muhit</h4>
+<h4>Tommy Harris</h4>
 <span>CEO/Founder</span>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
 </div>
@@ -212,7 +212,7 @@ Team </span></h2>
 <div class="col-lg-3 col-md-6 col-12 wow fadeInDown" data-wow-duration=500ms>
 <div class=team-member>
 <div class=member-photo>
-<img class="img-fluid lozad" data-src=https://axiosnm.github.io/images/team/team-2.webp onerror="this.onerror=null,this.src='https://axiosnm.github.io/images/team/team-2.jpg'" alt="Frank Miller">
+<img class="img-fluid lozad" data-src=https://axiosnm.github.io/images/team/myka.webp onerror="this.onerror=null,this.src='https://axiosnm.github.io/images/team/myka.jpg'" alt=Myka>
 <div class=mask>
 <ul class=list-inline>
 <li class=list-inline-item><a href=#><i class=ti-facebook></i></a></li>
@@ -223,8 +223,8 @@ Team </span></h2>
 </div>
 </div>
 <div class=member-meta>
-<h4>Frank Miller</h4>
-<span>Manager</span>
+<h4>Myka</h4>
+<span>Intruder Alarm</span>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
 </div>
 </div>
@@ -232,7 +232,7 @@ Team </span></h2>
 <div class="col-lg-3 col-md-6 col-12 wow fadeInDown" data-wow-duration=500ms>
 <div class=team-member>
 <div class=member-photo>
-<img class="img-fluid lozad" data-src=https://axiosnm.github.io/images/team/team-3.webp onerror="this.onerror=null,this.src='https://axiosnm.github.io/images/team/team-3.jpg'" alt="Michael Jonson">
+<img class="img-fluid lozad" data-src=https://axiosnm.github.io/images/team/desmond.webp onerror="this.onerror=null,this.src='https://axiosnm.github.io/images/team/desmond.jpg'" alt=Desmond>
 <div class=mask>
 <ul class=list-inline>
 <li class=list-inline-item><a href=#><i class=ti-facebook></i></a></li>
@@ -243,8 +243,8 @@ Team </span></h2>
 </div>
 </div>
 <div class=member-meta>
-<h4>Michael Jonson</h4>
-<span>Web Developer</span>
+<h4>Desmond</h4>
+<span>Fetcher</span>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
 </div>
 </div>
@@ -252,7 +252,7 @@ Team </span></h2>
 <div class="col-lg-3 col-md-6 col-12 wow fadeInDown" data-wow-duration=500ms>
 <div class=team-member>
 <div class=member-photo>
-<img class="img-fluid lozad" data-src=https://axiosnm.github.io/images/team/team-4.webp onerror="this.onerror=null,this.src='https://axiosnm.github.io/images/team/team-4.jpg'" alt="Mo. Kha. Alamgir">
+<img class="img-fluid lozad" data-src=https://axiosnm.github.io/images/team/hamish.webp onerror="this.onerror=null,this.src='https://axiosnm.github.io/images/team/hamish.jpg'" alt=Hamish>
 <div class=mask>
 <ul class=list-inline>
 <li class=list-inline-item><a href=#><i class=ti-facebook></i></a></li>
@@ -263,8 +263,8 @@ Team </span></h2>
 </div>
 </div>
 <div class=member-meta>
-<h4>Mo. Kha. Alamgir</h4>
-<span>SEO Specialist</span>
+<h4>Hamish</h4>
+<span>Master Infilatrator</span>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
 </div>
 </div>
@@ -284,23 +284,19 @@ Us </span></h2>
 </div>
 <div class="contact-info col-lg-6 wow fadeInUp" data-wow-duration=500ms>
 <h3>Contact Details</h3>
-<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, vero, provident, eum eligendi blanditiis ex explicabo vitae nostrum facilis asperiores dolorem illo officiis ratione vel fugiat dicta laboriosam labore adipisci. </p>
+<p> Looking for a quote or just want to discuss options and pricing? Drop us a line! </p>
 <div class=contact-details>
 <div class="con-info clearfix">
 <i class=ti-location-pin></i>
-<span>Khaja Road, Bayzid, Chittagong, Bangladesh</span>
+<span>Albuquerque, New Mexico</span>
 </div>
 <div class="con-info clearfix">
 <i class=ti-mobile></i>
-<span>Phone: +880-31-000-000</span>
-</div>
-<div class="con-info clearfix">
-<i class=ti-printer></i>
-<span>Fax: +880-31-000-000</span>
+<span>Phone: +1 860 245 8814</span>
 </div>
 <div class="con-info clearfix">
 <i class=ti-email></i>
-<span>Email: hello@meghna.com</span>
+<span>Email: info@axiosnm.com</span>
 </div>
 </div>
 </div>
